--- a/content/implementation.tex
+++ b/content/implementation.tex
@@ -8,7 +8,7 @@
 
 % Your content here.
 
-\section{Design and Implementation of Attributes}
+\section{Implementation of Attributes}
 
 % Your content here.
 
