--- a/content/preliminaries.tex
+++ b/content/preliminaries.tex
@@ -26,7 +26,10 @@
 
 % Your content here.
 
-\subsection{Business-Objective-Action}
+\subsection{Business-Objective-Action (BOA)}
+\subsubsection{Definition}
+The Business-Objective-Action (BOA) pattern is a structured approach to defining and organizing test cases based on business objectives and actions. It helps ensure that tests are aligned with business goals and provide meaningful feedback on the system's behavior.
+
 
 % Your content here.
 
