Add new acronyms and enhance BDD and BOA sections in documentation

--- a/content/preliminaries.tex
+++ b/content/preliminaries.tex
@@ -23,14 +23,17 @@
 % Your content here.
 
 \subsection{Behavior-Driven Development}
-
-% Your content here.
-
-\subsection{Business-Objective-Action (BOA)}
 \subsubsection{Definition}
-The Business-Objective-Action (BOA) pattern is a structured approach to defining and organizing test cases based on business objectives and actions. It helps ensure that tests are aligned with business goals and provide meaningful feedback on the system's behavior.
+\ac{BDD} is a software development methodology that focuses on defining the behavior of a system in terms of business requirements. It encourages collaboration between developers, testers, and business stakeholders to ensure that the system meets the desired functionality and provides value to the end users.
+
+\subsection{Business-Objective-Action}
+\subsubsection{Definition}
+
+The \ac{BOA} pattern is a structured approach to defining and organizing test cases based on business objectives and actions. It helps ensure that tests are aligned with business goals and provide meaningful feedback on the system's behavior.
 
 
 % Your content here.
 
 \section{Tools and Technologies}
+\subsection{Cecil-Mono}
+\subsection{Roslyn}
