--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -5,4 +5,25 @@
 \acro{CTU}[CTU]{Czech Technical University}
 \acro{BDD}[BDD]{Behavior-Driven Development}
 \acro{BOA}[BOA]{Business Objective Action}
+
+
+\acro{API}[API]{Application Programming Interface}
+\acro{DOF}[DOF]{degree-of-freedom}
+\acro{FOV}[FOV]{Field of View}
+\acro{GNSS}[GNSS]{Global Navigation Satellite System}
+\acro{GPS}[GPS]{Global Positioning System}
+\acro{IMU}[IMU]{Inertial Measurement Unit}
+\acro{LKF}[LKF]{Linear Kalman Filter}
+\acro{LTI}[LTI]{Linear time-invariant}
+\acro{LiDAR}[LiDAR]{Light Detection and Ranging}
+\acro{MAV}[MAV]{Micro Aerial Vehicle}
+\acro{MPC}[MPC]{Model Predictive Control}
+\acro{MRS}[MRS]{Multi-robot Systems Group}
+\acro{ROS}[ROS]{Robot Operating System}
+\acro{RTK}[RTK]{Real-time Kinematics}
+\acro{SLAM}[SLAM]{Simultaneous Localization And Mapping}
+\acro{UAV}[UAV]{Unmanned Aerial Vehicle}
+\acro{UGV}[UGV]{Unmanned Ground Vehicle}
+\acro{UKF}[UKF]{Unscented Kalman Filter}
+
 \end{acronym}
